The magnifier icon for searching repeats on IE 11 fixed

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -13,8 +13,7 @@
     background-position-x: 8px;
     background-position-y: 50%;
     background-size: initial;
-    background-repeat-x: no-repeat;
-    background-repeat-y: no-repeat;
+    background-repeat: no-repeat;
 	box-shadow: none;
 	padding-left: 25px;
 }
